Fix calendar color in task and supply lists; correctly align calendar icons with left list edge. #412

--- a/app/assets/stylesheets/views/circle/tasks/task-list-item.scss
+++ b/app/assets/stylesheets/views/circle/tasks/task-list-item.scss
@@ -45,7 +45,6 @@
 
   .task-details {
     @include flex(1);
-    margin-left: 2rem;
     padding: 1rem 0 0 0;
 
     @include display(flex);
