--- a/app/assets/stylesheets/views/circle/tasks/task_urgencies.scss
+++ b/app/assets/stylesheets/views/circle/tasks/task_urgencies.scss
@@ -1,5 +1,5 @@
 .taskable-urgency-new {
-  .date {
+  .date, .task-date {
 
     .month {
       background: $blue-darkish;
@@ -25,7 +25,7 @@
 }
 
 .taskable-urgency-complete {
-  .date {
+  .date, .task-date {
      .month {
        background-color: $green;
      }
@@ -53,7 +53,7 @@
 }
 
 .taskable-urgency-urgent {
-  .date {
+  .date, .task-date {
     .month {
       background-color: $red;
       color: $blue-light-1;
@@ -78,7 +78,7 @@
 }
 
 .taskable-urgency-on_track {
-  .date {
+  .date, .task-date {
     .month {
       background-color: $blue-dark-1;
       color: $blue-light-1;
